fix flex gaps

--- a/_src/scss/blocks/_brag-bar.scss
+++ b/_src/scss/blocks/_brag-bar.scss
@@ -34,17 +34,18 @@
   }
 
   &__logos {
-    display:inline-flex;
-    column-gap: 2rem;
-    row-gap: 1.5rem;
+    --gap: 2rem;
+    display: inline-flex;
     flex-wrap: wrap;
+    margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
+    width: calc(100% + var(--gap));
     justify-content: center;
 
     
   }
 
   &__logo {
-    
+    margin: var(--gap) 0 0 var(--gap);
     align-self: center;
     text-align: center;
     
